--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
-    "cordova-plugin-geolocation"
+    "cordova-plugin-geolocation",
+    "cordova-plugin-camera"
   ],
   "cordovaPlatforms": []
 }
